# emission-optimization-backend

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: controller.py
app/db/: base.py  tables.py
app/models/: response_model.py
app/products/: controller.py  repository.py  service.py
app/tests/: conftest.py  test_products_routes.py
database_init/: database_dump.sql
