[project]
name = "app"
version = "0.1.0"
description = "Software engineer exercise app"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "fastapi-utils[all]>=0.8.0",
    "psycopg2-binary>=2.9.10",
    "pytest>=8.4.1",
]

[dependency-groups]
dev = [
    "ruff>=0.12.4",
    "pytest>=8.3.3",
    "pytest-mock>=3.14.0",
]
